# neo-todo

./: Cargo.toml  LICENSE  README.md
neo-todo/: Cargo.toml
neo-todo-backend/: .env  Cargo.toml  Rocket.toml
neo-todo-backend/migrations/: 20230513034305_neo-todo.down.sql  20230513034305_neo-todo.up.sql
neo-todo-backend/src/: main.rs
neo-todo-client/: package-lock.json  package.json
neo-todo-client/src/: App.vue  main.ts  utils.ts
neo-todo-client/src-tauri/: Cargo.toml  tauri.conf.json
neo-todo-client/src/components/: CategoryEdit.vue  LogPage.vue  Main.vue  TagEdit.vue  TaskEdit.vue  TaskItem.vue  Tasks.vue
neo-todo-client/src/components/TaskEdit/: Common.vue  CommonTaskEdit.vue  Duration.vue  DurationTaskEdit.vue  Reminder.vue  ReminderTaskEdit.vue
neo-todo/src/: lib.rs
scripts/: post.py  test.ipynb
