[package]
name = "neo-todo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo-todo = { path = "../neo-todo" }

anyhow = "1.0.71"
dotenvy = "0.15.7"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_mysql"] }
serde = "1.0.163"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "chrono"] }
chrono = "0.4.24"
